tests/sema/golden/18_reduce_calls_impure.out
tests/sema/bad/18_reduce_calls_impure.sg:2:50: error: calling impure function 'imp' in a pure context
  parallel reduce [1,2,3] with (acc:int, v:int) => imp(acc, v); // body in pure ctx -> error
                                                   ^
